--- a/assets/css/todos.css
+++ b/assets/css/todos.css
@@ -84,3 +84,9 @@ input {
 	color: gray;
 	text-decoration: line-through;
 }
+
+.btn-primary {
+    color: #fff;
+    background-color: #0275d8;
+    border-color: #0275d8;
+}
